--- a/output/archives.html
+++ b/output/archives.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">NLP & me</a>
+          <a class="navbar-brand" href="">NLP & Me</a>
         </div>
         <div class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
@@ -53,7 +53,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <p class="footer-text">&copy; <a href="">NLP & me</a> powered by <a href="http://getpelican.com/">pelican</a> and <a href="http://nodotcom.org">nikhil</a></p>
+        <p class="footer-text">&copy; <a href="">NLP & Me</a> powered by <a href="http://getpelican.com/">pelican</a> and <a href="http://nodotcom.org">nikhil</a></p>
       </div>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
