almost there now

--- a/output/authors.html
+++ b/output/authors.html
@@ -217,6 +217,18 @@ NLP & Me            </a>
                          <li><a href="/pages/publications.html">
                              Publications
                           </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
+                          </a></li>
+                         <li><a href="/pages/various.html">
+                             Various
+                          </a></li>
+                        <li >
+                            <a href="/category/blog.html">Blog</a>
+                        </li>
+                        <li >
+                            <a href="/category/machine-learning.html">Machine learning</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
